[gd_scene load_steps=8 format=3 uid="uid://bcfeoif0feglx"]

[ext_resource type="Script" path="res://ui/figher_preview.gd" id="1_s3qk1"]
[ext_resource type="Texture2D" uid="uid://dism7rndt2kwr" path="res://assets/images/fighters/emmanuel_macron.png" id="2_6nksp"]
[ext_resource type="Theme" uid="uid://dkhurhcophc2q" path="res://resources/themes/main_theme.tres" id="3_cp0ex"]
[ext_resource type="Texture2D" uid="uid://di5mv1802cmp6" path="res://assets/images/universes/rec.png" id="3_exmww"]
[ext_resource type="FontFile" uid="uid://kasuqta1fav8" path="res://assets/fonts/marianne_extra_bold.otf" id="5_sm0w2"]

[sub_resource type="LabelSettings" id="LabelSettings_20om3"]
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_r0nlk"]
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[node name="FighterPreview" type="Control"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_s3qk1")

[node name="FighterPreviewImage" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6nksp")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="PlayerIndexLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("3_cp0ex")
text = "J{0}"
label_settings = SubResource("LabelSettings_20om3")

[node name="UniverseIcon" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.729412)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("3_exmww")
expand_mode = 2

[node name="NameAndInfo" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Names" type="VBoxContainer" parent="MarginContainer/NameAndInfo"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -239.0
offset_top = -107.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 8
alignment = 2

[node name="FirstNameMargin" type="MarginContainer" parent="MarginContainer/NameAndInfo/Names"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_right = 12

[node name="FirstNameLabel" type="Label" parent="MarginContainer/NameAndInfo/Names/FirstNameMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("3_cp0ex")
theme_override_fonts/font = ExtResource("5_sm0w2")
text = "Jean-Luc"
label_settings = SubResource("LabelSettings_20om3")

[node name="LastNameLabel" type="Label" parent="MarginContainer/NameAndInfo/Names"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("3_cp0ex")
theme_override_fonts/font = ExtResource("5_sm0w2")
text = "GLUCKSMANN"
label_settings = SubResource("LabelSettings_r0nlk")
uppercase = true
